<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_main"
    android:orientation="vertical"
    tools:context=".MainActivity">



        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/hindi"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:shadowColor="@android:color/holo_orange_light"
                android:text="@string/hindi_songs"
                android:textStyle="italic"></Button>

            <Button
                android:id="@+id/Marathi"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:shadowColor="@android:color/holo_blue_light"
                android:text="@string/marathi_songs"
                android:textStyle="italic"></Button>

            <Button
                android:id="@+id/Panjabi"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:shadowColor="@android:color/holo_purple"
                android:text="@string/panjabi_songs"
                android:textStyle="italic"></Button>

            <Button
                android:id="@+id/english"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:shadowColor="#009688"
                android:text="@string/english_songs"
                android:textStyle="italic"></Button>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/now_playing_song_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:text="Sajda" />

        <ImageView
            android:id="@+id/now_playing_song_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:src="@drawable/my_name_is_khan"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/now_playing_song_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            tools:text="Rahat Fateh Ali Khan, Shankaran Mahadevan &amp; Richa Sharma" />

        <TextView
            android:id="@+id/now_playing_song_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#E91E63"
            android:textSize="30sp"
            tools:text="My Name is Khan" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/l2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backward_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/backward_arrow"
            tools:ignore="contentDescription" />

        <ImageView
            android:id="@+id/play_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/play_arrow"
            tools:ignore="contentDescription" />

        <ImageView
            android:id="@+id/forward_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/forward_arrow"
            tools:ignore="contentDescription" />
    </LinearLayout>


</LinearLayout>
</ScrollView>

